# HapticGamesTouchX

./: .gitignore  README.md
app/tilt-board/: Makefile  run.sh
app/tilt-board2/: CGenericScene.cpp  CGenericScene.h  CMakeLists.txt  CScene1.cpp  CScene1.h  CScene2.cpp  CScene2.h  CScene3.cpp  CScene3.h  tilt-board2.cpp
app/tilt-board2/examples/: CGenericScene.cpp  CGenericScene.h  CMakeLists.txt  CScene1.cpp  CScene1.h  CScene2.h  CScene3.cpp  CScene3.h  tilt-board2.cpp
app/tiltboard-win/tiltboard-win/: CGenericScene.cpp  CGenericScene.h  CScene1.cpp  CScene1.h  CScene2.cpp  CScene2.h  CScene3.cpp  CScene3.h  DebugScene.cpp  GenericScene.cpp  GenericScene.h  Scene1.cpp  Scene1.h  Scene2.cpp  Scene2.h  Scene3.cpp  Scene3.h  SensorData.cpp  SensorData.h  sensor.py  setup.bat  tilt-board2.cpp  tilt-board2.h  tiltboard-win.sln  tiltboard-win.vcxproj  tiltboard-win.vcxproj.filters
app/tiltboard-win/tiltboard-win/resources/: 1_waypoints.txt  3_waypoints.txt
tilt-board/: tilt-board.cpp
tilt-board2/: CGenericScene.cpp  CScene1.cpp  CScene2.cpp  CScene3.cpp  CScene3.h  tilt-board2.cpp
